[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/selections.gd" type="Script" id=1]
[ext_resource path="res://images/Jesse_eye_red.jpg" type="Texture" id=2]
[ext_resource path="res://images/James_eye_green.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/Courier-Mechanical.otf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/futur.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sounds/musics/licensed_music/Mujoæƒ… - Gangster.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("many_players/players:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 4.31243, 6.43003 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("many_players:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("many_players/players:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 140 ), Vector2( -290, -180 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "james_eye_large"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("background/squares/James_eye:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.034524, 0.5 ),
"transitions": PoolRealArray( 1, 0.0236831 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "jesse_eye_large"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("background/squares/Jesse_eye:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.0220971 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[node name="selections" type="Node"]
script = ExtResource( 1 )

[node name="background" type="Control" parent="."]
margin_right = 1200.0
margin_bottom = 600.0

[node name="squares" type="Control" parent="background"]
margin_right = 1200.0
margin_bottom = 600.0

[node name="red" type="ColorRect" parent="background/squares"]
margin_right = 600.0
margin_bottom = 600.0
color = Color( 0.890196, 0.772549, 0.756863, 1 )

[node name="green" type="ColorRect" parent="background/squares"]
margin_right = 1200.0
margin_bottom = 600.0
color = Color( 0.756863, 0.890196, 0.839216, 1 )

[node name="Jesse_eye" type="TextureRect" parent="background/squares"]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = 500.0
margin_bottom = 500.0
rect_pivot_offset = Vector2( 200, 200 )
texture = ExtResource( 2 )

[node name="James_eye" type="TextureRect" parent="background/squares"]
visible = false
margin_left = 700.0
margin_top = 100.0
margin_right = 1100.0
margin_bottom = 500.0
rect_scale = Vector2( 1.1, 1.1 )
rect_pivot_offset = Vector2( 200, 200 )
texture = ExtResource( 3 )

[node name="tween" type="Tween" parent="background/squares"]

[node name="Jesse_button" type="Button" parent="background/squares"]
visible = false
margin_left = 100.0
margin_top = 520.0
margin_right = 500.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.635294, 0.427451, 0.4, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.529412, 0.494118, 1 )
text = "Jesse Capshaw"
flat = true

[node name="James_button" type="Button" parent="background/squares"]
visible = false
margin_left = 700.0
margin_top = 520.0
margin_right = 1100.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.254902, 0.580392, 0.509804, 1 )
custom_colors/font_color_hover = Color( 0.372549, 0.815686, 0.721569, 1 )
text = "James Connor"
flat = true

[node name="many_players" type="Control" parent="."]
margin_left = 200.0
margin_top = 100.0
margin_right = 1000.0
margin_bottom = 500.0

[node name="players" type="VBoxContainer" parent="many_players"]
margin_left = 240.0
margin_top = 140.0
margin_right = 560.0
margin_bottom = 260.0
custom_constants/separation = 20
alignment = 1

[node name="one_player" type="Button" parent="many_players/players"]
margin_top = 3.0
margin_right = 320.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.254902, 0.580392, 0.509804, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.372549, 0.32549, 1 )
custom_colors/font_color_pressed = Color( 0.160784, 0.372549, 0.32549, 1 )
text = "ONE PLAYER"
flat = true

[node name="two_players" type="Button" parent="many_players/players"]
margin_top = 70.0
margin_right = 320.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.254902, 0.580392, 0.509804, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.372549, 0.32549, 1 )
custom_colors/font_color_pressed = Color( 0.160784, 0.372549, 0.32549, 1 )
text = "TWO PLAYERS"
flat = true

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="animation" type="AnimationPlayer" parent="."]
anims/gone = SubResource( 5 )
anims/james_eye_large = SubResource( 6 )
anims/jesse_eye_large = SubResource( 7 )
[connection signal="tween_completed" from="background/squares/tween" to="." method="_on_green_square_tween_completed"]
[connection signal="tween_started" from="background/squares/tween" to="." method="_on_tween_started"]
[connection signal="mouse_entered" from="background/squares/Jesse_button" to="." method="_on_Jesse_button_mouse_entered"]
[connection signal="mouse_exited" from="background/squares/Jesse_button" to="." method="_on_Jesse_button_mouse_exited"]
[connection signal="pressed" from="background/squares/Jesse_button" to="." method="_on_Jesse_button_pressed"]
[connection signal="mouse_entered" from="background/squares/James_button" to="." method="_on_James_button_mouse_entered"]
[connection signal="mouse_exited" from="background/squares/James_button" to="." method="_on_James_button_mouse_exited"]
[connection signal="pressed" from="background/squares/James_button" to="." method="_on_James_button_pressed"]
[connection signal="pressed" from="many_players/players/one_player" to="." method="_one_player_pressed"]
[connection signal="pressed" from="many_players/players/two_players" to="." method="_two_players_pressed"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
